--- a/school_lms/core/templates/core/base.html
+++ b/school_lms/core/templates/core/base.html
@@ -1,13 +1,14 @@
+{% load static %}  <!-- Load static template tag library -->
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    {% load static %}
-    <link rel="stylesheet" href="{% static 'static/css/styles.css' %}">
-    <title>{% block title %}School Management System{% endblock %}</title>
+    <title>My School LMS</title>
+    <link rel="stylesheet" type="text/css" href="{% static 'static/css/style.css' %}">
 </head>
 <body>
+    <h1>Welcome to the School LMS</h1>
     {% block content %}
     {% endblock %}
 </body>
